2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (adjust_nodestart): Initialize variable.

	* info/info-utils.c (info_parse_label): Skip whitespace before label.
	* info/session.c (backward_move_node_structure): Check if next or up
	is a dir file properly.
	(forward_move_node_structure, backward_move_node_structure)
	(last_node_p): Avoid assignments in conditions.

2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c:
	(main) Only output a warning in --remove operation if dir file
	not found, and exit successfully.
	(readfile, open_possibly_compressed_file): Do not exit program
	on error; pass back name of file with error and return null instead.
	(pfatal_with_name): Error message for empty file moved from
	open_possibly_compressed_file.

2014-04-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_file_buffer_tags): Use |= where intended.
	* info/nodes.c: Comments edited.

2014-04-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (init_file_buffer_tag): New function.  Conditonally set
	N_HasTagsTable and N_TagsIndirect on tag table entries.
	(get_nodes_of_info_file, get_nodes_of_tag_table): Create tag table
	entries with info_create_node and init_file_buffer_tag.  Set
	nodelen to -1 for all tags.
	(get_tags_of_indirect_tags_table): Set N_TagsIndirect in flags before
	calling get_nodes_of_tags_table so it will be set on tag table entries.
	
	* info/nodes.h: (N_WasRewritten): New preprocessor symbol.
	(NODE.content_cache): Field deleted.
	
	* info/nodes.c (adjust_nodestart): Do not read or write contents field
	of tag.  Alter nodestart field.  Call find_node_in_binding instead
	of find_node_separator.  Arguments changed.
	(set_tag_nodelen): New function, split out from
	info_node_of_file_buffer_tags.
	(info_node_of_file_buffer_tags): Do not set N_HasTagsTable or
	N_TagsIndirect on returned node.  If tags_expand expanded any tags,